--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -3,8 +3,8 @@
 # Declare variables to be passed into your templates.
 
 global:
- mode: quickstart
- #mode: standalone
+    #mode: quickstart
+ mode: standalone
  #mode: cluster 
  storageClass: 
    provisioner: 
