--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -164,18 +164,18 @@ persistence:
         storage: 5Gi
 
 service:
-  #type: ClusterIP
-  type: NodePort
+  type: ClusterIP
+  #type: NodePort
   port: 8848
   nodePort: 30000
 
 ingress:
-  enabled: false
+  enabled: true
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: nacos.example.com
+    - host: nacos-test.shannonai.com
       paths: []
 
   tls: []
